# qt6-devices-Integration

./: .gitignore  CMakeLists.txt  README.md  logo.rc
.cache/clangd/index/: AlertWapper.h.0D52BF77B41681BA.idx  AlgorithmWapper.h.127F79FBC1AE6982.idx  AppFramework.h.B724D85F559B9A25.idx  AppFrameworkImpl.cpp.008A2D452CFB667D.idx  AppFrameworkImpl.h.FC9E164DB9FF8383.idx  AppMetaFlash.cpp.3C7459F99E74033E.idx  AppMetaFlash.h.F003685C6830EA48.idx  AppPlcExtension.cpp.203080FCCA762D3B.idx  AppPlcExtension.h.1D8BA2BF0E6433FA.idx  AppProductExtension.cpp.FF690D3A1219A6B6.idx  AppProductExtension.h.0DF9C2FF8EC849EB.idx  AppQmlExtension.cpp.66ED7767317D6571.idx  AppQmlExtension.h.4685762E61BACCCE.idx  AppSourceExtension.cpp.72FC49623969B947.idx  AppSourceExtension.h.3D3A3220290EB228.idx  AppStatisticsExtension.h.2E0068DA35A68197.idx  AppTest.cpp.AB87685ABCA28F85.idx  AppTest.h.CE3DC71303E1A9E2.idx  BaseClient.h.AD065C391CA47D07.idx  BasePLCDevice.cpp.BCB146B7623F8BD9.idx  BasePLCDevice.h.85E84B82337A669A.idx  BaseProduct.cpp.A75FE1CEC82DE719.idx  BaseProduct.h.ABCF02C7A4CE56D8.idx  BaseStatistics.cpp.366DC382AC8FDAAF.idx  BaseStatistics.h.E6B8229DDAEEBCB2.idx  BaumerCamera.cpp.A96179DD56E01249.idx  BaumerCamera.h.76D03D8DA1E3027A.idx  CameraManager.cpp.F8A183E6FE231F39.idx  CameraManager.h.6A1A74FBAFD950C5.idx  CapDevice.cpp.6FA41583DCFB24A0.idx  CapDevice.h.77A6D28ABB543FBA.idx  CapProduct.cpp.5042A0097798AF8E.idx  CapProduct.h.415C07A782DFDCF4.idx  CapStatistics.h.A048F905C505F558.idx  CircleDevice.cpp.9D1814F4309A9DA7.idx  CircleDevice.h.420B9BA80561F5B5.idx  CircleProduct.cpp.B305AAD4AB9578DD.idx  CircleProduct.h.7456D1A4121F3105.idx  Cognex.cpp.688EF830B02A90FB.idx  Cognex.h.1473653BA01522CA.idx  (+54 more)
doc/: interface.md
qml/: AddUser.qml  Alarm.qml  App.qml  Camera.qml  CameraParam.qml  CapCameraParam.qml  CapMaster.qml  ComponentList.qml  FormulaPage.qml  GreenImage.qml  Login.qml  Main.qml  MainWindow.qml  Master.qml  ModifyUser.qml  ModifyUserInfo.qml  MySwitch.qml  PageButton.qml  PageComponent.qml  PlcTest.qml  PowerPage.qml  ProduceData.qml  Screen01.ui.qml  SensorControll.qml  SensorPage.qml  StrightCamera.qml  StrightMainWindow.qml  StrightMaster.qml  StrightPowerPage.qml  StrightProduceData.qml  StrightValvePage.qml  UserPage.qml  ValvePage.qml
qml/ico/ico20170422/: 未标题-1.ai
res/: logo.rc
res/config/: config-回转式一.yaml  config回转式二.yaml
src/: main.cpp
src/app/: AppFramework.h  AppFrameworkImpl.cpp  AppFrameworkImpl.h  AppMetaFlash.cpp  AppMetaFlash.h  AppPlcExtension.h  AppProductExtension.cpp  AppProductExtension.h  AppQmlExtension.cpp  AppQmlExtension.h  AppSourceExtension.cpp  AppSourceExtension.h  AppStatisticsExtension.h  ImagePainter.cpp  ImagePainter.h
src/app/interface/: AppCameraExtension.h  AppCentralExtension.cpp  AppCentralExtension.h  AppPlcExtension.h  AppProductExtension.cpp  AppProductExtension.h  AppQmlExtension.cpp  AppQmlExtension.h  AppSourceExtension.cpp  AppSourceExtension.h  AppStatisticsExtension.h  AppUdpCameraExtension.cpp  AppUdpCameraExtension.h
src/camera/: BaumerCamera.cpp  BaumerCamera.h  BaumerManage.cpp  BaumerManage.h  BaumerManager.cpp  BaumerManager.h  BufferInformation.h  Camera.cpp  Camera.h  CameraImageProvider.cpp  CameraImageProvider.h  CameraManager.cpp  CameraManager.h  ImageProvider.cpp  ImageProvider.h  MyBaumerCamera.cpp  MyBaumerCamera.h  MyBaumerManage.cpp  MyBaumerManage.h  MyThread.cpp  Mythread.h
src/camera/Baumer/: pcamera.cpp  pcamera.h
src/camera/Baumer/Inc/: bgapi2_def.h  bgapi2_featurenames.h  bgapi2_genicam.hpp  bgapi2_types.h
src/camera/Baumer/Lib/: bgapi2_genicam.lib
src/camera/Siso/: iolibrt.lib
src/cognex/: Cognex.cpp  Cognex.h
src/domino/: Domino.cpp  Domino.h
src/gpu/: ImagePainter.h
src/http/: HttpApiManager.cpp  HttpApiManager.h  HttpClient.cpp  HttpClient.h
src/network/: CentralClient.cpp  CentralClient.h  Cognex.cpp  Cognex.h  Domino.cpp  Edge.cpp  Edge.h  Permission.cpp  Permission.h  PrinterDevice.cpp  PrinterDevice.h  UDPCamera.cpp  UDPCamera.h  WebManager.cpp  WebManager.h
src/plc/: BaseClient.h  BasePLCDevice.cpp  BasePLCDevice.h  BoxAppDevice.cpp  BoxAppDevice.h  CapDevice.cpp  CapDevice.h  CircleDevice.cpp  CircleDevice.h  DeviceUpdate.cpp  DeviceUpdate.h  ImpurityDevice.cpp  ImpurityDevice.h  LineDevice.cpp  LineDevice.h  ModbusClient.cpp  ModbusClient.h  PLCDevice.cpp  PLCDevice.h  RegistersWapper.h  Snap7Client.cpp  Snap7Client.h
src/product/: BaseProduct.cpp  BaseProduct.h  BoxAppProduct.cpp  BoxAppProduct.h  CapProduct.cpp  CapProduct.h  CircleProduct.cpp  CircleProduct.h  ImpurityProduct.cpp  ImpurityProduct.h  LineProduct.cpp  LineProduct.h  Product.h
src/sql/: AlertWapper.h  AlgorithmWapper.h  BottleWapper.h  CameraWapper.h  CapProductDataWapper.h  CapProductTimeWapper.h  CircleProductDataWapper.h  CircleProductTimeWapper.h  DBConnectionPool.cpp  DBConnectionPool.h  ElecWapper.h  FormulaWapper.h  LineProductDataWapper.h  LineProductTimeWapper.h  LogWapper.h  MysqlConnectionPool.cpp  MysqlConnectionPool.h  MysqlHelper.h  PgsqlConnectionPool.cpp  PgsqlConnectionPool.h  PgsqlHelper.h  PlcWapper.h  ProductDataWapper  ProductDataWapper.h  ProductTimeWapper.h  ProductWapper.h  SqlHelper.h  UserWapper.h  init.sql  pginit.sql
src/statistics/: BaseStatistics.cpp  BaseStatistics.h  BoxAppStatistics.cpp  BoxAppStatistics.h  CapStatistics.cpp  CapStatistics.h  CircleStatistics.cpp  CircleStatistics.h  ImpurityStatistics.cpp  ImpurityStatistics.h  LineStatistics.cpp  LineStatistics.h  StatisticsWapper.h
src/tcpclient/: Algorithm.cpp  Algorithm.h  Cognex.cpp  Cognex.h  Domino.cpp  Domino.h  Permission.cpp  Permission.h  WebManager.cpp  WebManager.h
src/test/: AppTest.cpp  AppTest.h  ExtraTest.cpp  ExtraTest.h
src/utils/: ConcurrentPool.cpp  ConcurrentPool.h  ConcurrentTaskQueue.cpp  ConcurrentTaskQueue.h  LockFreeQueue.h  Logger.cpp  Logger.h  ModbusClient.cpp  ModbusClient.h  NonCopyable.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TaskQueue.h  Utils.cpp  Utils.h  WebsocketClient.cpp  WebsocketClient.h
